--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <link rel="apple-touch-icon" href="img/logo.png">
 </head>
 <body>
-    <header>
-        <div class="hamburger-menu" id="hamburgerMenu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </header>
+    <!-- ハンバーガーメニュー -->
+    <div class="floating-hamburger fade-in delay-4">
+        <button class="navbar-toggler" type="button" id="hamburgerMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
 
-    <nav id="fullScreenMenu" class="hidden">
+    <!-- 全画面メニュー -->
+    <div id="fullScreenMenu" class="hidden">
         <ul>
             <li><a href="#title-section">タイトル</a></li>
             <li><a href="#synopsis-section">あらすじ</a></li>
@@ -29,68 +29,86 @@
             <li><a href="#flyer-section">ビラ</a></li>
             <li><a href="#sns-section">SNS情報</a></li>
         </ul>
-    </nav>
+    </div>
 
-    <section id="title-section" class="parallax">
-        <div class="content">
-            <h1>劇団あまつかぜ</h1>
-            <p>サブタイトルやキャッチフレーズ</p>
+	<section id="title-section" class="parallax">
+		<img src="img/home.jpg" alt="背景画像" class="img-fluid">
+		<div class="content text-center">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<h1 class="fade-in delay-1">劇団あまつかぜ 旗揚げ公演</h1>
+						<p class="fade-in delay-2">空</p>
+						<p class="fade-in delay-2">の</p>
+						<p class="fade-in delay-2">村</p>
+						<p class="fade-in delay-2">号</p>
+						<p class="fade-in delay-3">演出：作：</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+    <section id="synopsis-section" class="container">
+        <div class="row">
+            <div class="col-12 text-box">
+                <h2>あらすじ</h2>
+                <p>物語の概要をここに記載します。</p>
+            </div>
         </div>
     </section>
 
-    <section id="synopsis-section">
-        <div class="text-box">
-            <h2>あらすじ</h2>
-            <p>物語の概要をここに記載します。</p>
-        </div>
-        <div class="text-box">
-            <p>さらに詳しい説明をここに記載します。</p>
-        </div>
-    </section>
-
-    <section id="info-section">
-        <div class="text-box">
-            <h2>公演情報</h2>
-            <p>公演日程や場所の詳細。</p>
-        </div>
-        <div class="text-box">
-            <p>チケット情報やアクセス方法などを記載。</p>
+    <section id="info-section" class="container">
+        <div class="row">
+            <div class="col-md-6 text-box">
+                <h2>公演情報</h2>
+                <p>公演日程や場所の詳細。</p>
+            </div>
+            <div class="col-md-6 text-box">
+                <p>チケット情報やアクセス方法などを記載。</p>
+            </div>
         </div>
     </section>
 
-    <section id="cast-section">
-        <div class="text-box">
-            <h2>キャスト＆スタッフ</h2>
-            <p>主要キャストの紹介。</p>
-        </div>
-        <div class="text-box">
-            <p>スタッフの紹介。</p>
-        </div>
-    </section>
-
-    <section id="flyer-section">
-        <div class="text-box">
-            <h2>ビラ掲載</h2>
-            <img src="flyer.jpg" alt="ビラ">
-        </div>
-        <div class="text-box">
-            <p>ビラに関する説明やダウンロードリンク。</p>
+    <section id="cast-section" class="container">
+        <div class="row">
+            <div class="col-md-6 text-box">
+                <h2>キャスト</h2>
+                <p>主要キャストの紹介。</p>
+            </div>
+            <div class="col-md-6 text-box">
+                <h2>スタッフ</h2>
+                <p>スタッフの紹介。</p>
+            </div>
         </div>
     </section>
 
-    <section id="sns-section">
-        <div class="text-box">
-            <h2>SNS情報</h2>
-            <p>公式SNSのリンクやQRコード。</p>
-        </div>
-        <div class="text-box">
-            <p>フォローを促すメッセージ。</p>
+    <section id="flyer-section" class="container">
+        <div class="row">
+            <div class="col-12 text-center text-box">
+                <h2>ビラ掲載</h2>
+                <img src="img/poster.png" alt="ビラ" class="img-fluid">
+            </div>
         </div>
     </section>
 
-    <footer>
+    <section id="sns-section" class="container">
+        <div class="row">
+            <div class="col-md-6 text-box">
+                <h2>SNS情報</h2>
+                <p>公式SNSのリンクやQRコード。</p>
+            </div>
+            <div class="col-md-6 text-box">
+                <p>フォローを促すメッセージ。</p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 劇団あまつかぜ</p>
     </footer>
+    <!-- Bootstrap 5 JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
