--- a/index.html
+++ b/index.html
@@ -37,12 +37,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12 text-center">
-						<h1 class="fade-in delay-1">劇団あまつかぜ 旗揚げ公演</h1>
-						<p class="fade-in delay-2">空</p>
-						<p class="fade-in delay-2">の</p>
-						<p class="fade-in delay-2">村</p>
-						<p class="fade-in delay-2">号</p>
-						<p class="fade-in delay-3">演出：作：</p>
+						<h2 class="fade-in delay-1">劇団あまつかぜ 旗揚げ公演</h2>
+						<h1 class="fade-in delay-2 ">空の村号</h1>
+						<p class="fade-in delay-3">作：篠原久美子<br>演出：鈴木快聖</p>
 					</div>
 				</div>
 			</div>
