--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="劇団筑波小劇場, げきだんつくばしょうげきじょう, 劇団あまつかぜ, げきだんあまつかぜ, あまつかぜ, ゲキダンツクバショウゲキジョウ, 劇団つくば小劇場, 筑波小劇場, つくばしょうげきじょう, ツクバショウゲキジョウ,卒業公演, 筑小, ツクショウ, つくしょう, 筑波大学, 演劇, 学生演劇, 演劇サークル, 大学生, 空の村号, 村号, 空の, そらのむらごう, ">
     <title>空の村号</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico">
@@ -38,7 +41,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<h2 class="fade-in delay-1">劇団あまつかぜ 旗揚げ公演</h2>
-						<h1 class="fade-in delay-2 ">空の村号</h1>
+                        <img class="fade-in delay-2" src="img/title.png" alt="空の村号"></div>
+						<!--<h1 class="fade-in delay-2">空の村号</h1>-->
 						<p class="fade-in delay-3">作：篠原久美子<br>演出：鈴木快聖</p>
 					</div>
 				</div>
