--- a/index.html
+++ b/index.html
@@ -34,20 +34,16 @@
         </ul>
     </div>
 
-	<section id="title-section" class="parallax">
-		<img src="img/home.jpg" alt="背景画像" class="img-fluid">
-		<div class="content text-center">
-			<div class="container">
-				<div class="row">
-					<div class="col-12 text-center">
-						<h2 class="fade-in delay-1">劇団あまつかぜ 旗揚げ公演</h2>
-                        <img class="fade-in delay-2" src="img/title.png" alt="空の村号"></div>
-						<!--<h1 class="fade-in delay-2">空の村号</h1>-->
-						<p class="fade-in delay-3">作：篠原久美子<br>演出：鈴木快聖</p>
-					</div>
-				</div>
-			</div>
-		</div>
+	<secti id="title-section" class="parallax">
+        <div class="back">
+		    <img src="img/home.jpg" alt="背景画像" class="img-fluid back">
+        </div>
+		<div class="content">
+            <h2 class="fade-in delay-1">劇団あまつかぜ 旗揚げ公演</h2>
+            <img class="fade-in delay-2" src="img/title.png" alt="空の村号">
+            <!--<h1 class="fade-in delay-2">空の村号</h1>-->
+            <p class="fade-in delay-3">作：篠原久美子<br>演出：鈴木快聖</p>
+        </div>
 	</section>
 
     <section id="synopsis-section" class="container">
