--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- ハンバーガーメニュー -->
-    <div class="floating-hamburger fade-in delay-4">
+    <div class="floating-hamburger fade-in delay-1">
         <button class="navbar-toggler" type="button" id="hamburgerMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,7 +34,7 @@
         </ul>
     </div>
 
-	<secti id="title-section" class="parallax">
+	<section id="title-section" class="parallax">
         <div class="back">
 		    <img src="img/home.jpg" alt="背景画像" class="img-fluid back">
         </div>
@@ -50,7 +50,10 @@
         <div class="row">
             <div class="col-12 text-box">
                 <h2>あらすじ</h2>
-                <p>物語の概要をここに記載します。</p>
+                <p>福島の里山で暮らす酪農一家の長男・楠木空には、特に将来の夢がない。<br>
+                    小学校5年生になった空は、とあるきっかけから映画監督に興味を持つようになる。<br>
+                    そんな中、空の日常を壊すかのように、突然大きな地震が起こった。<br>
+                    その地震は、空や村に住む人々の世界を大きく変えてしまうのだった。</p>
             </div>
         </div>
     </section>
@@ -58,11 +61,30 @@
     <section id="info-section" class="container">
         <div class="row">
             <div class="col-md-6 text-box">
-                <h2>公演情報</h2>
-                <p>公演日程や場所の詳細。</p>
+                <div class="about_title fadeIn"><h2>公演情報</h2></div>
+                <div class="about_time">
+                    <div class="tape1"></div><!-- ここまで付箋テープ -->
+                    <div class="l-border l-p-t l-p-r l-p-b l-p-l hlabel1">
+                        <h4>-&nbsp;公演日程&nbsp;-</h4>
+                        <p style="margin: 0;">&nbsp;&nbsp;第1回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;第2回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 10:00開場 10:15開演<br>&nbsp;&nbsp;第3回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演</p>
+                        <div class="res_link"><p>ご予約はこちらから→</p></div>
+                        <div class="husen_img1"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe112nAMO6H0qfKzxoFiNjHhEo5FO9wM478jrwQf6YvgC1lFg/viewform"><img src="img/calender.png" alt="memo"></a></div>
+                    </div><!-- ここまで付箋 -->
+                    <p>&nbsp;</p>
+                </div>
             </div>
             <div class="col-md-6 text-box">
-                <p>チケット情報やアクセス方法などを記載。</p>
+                <div class="about_map">
+                    <div class="tape2"></div><!-- ここまで付箋テープ -->
+                    <div class="l-border l-p-t l-p-r l-p-b l-p-l hlabel2">
+                        <h4>-&nbsp;会場情報&nbsp;-</h4>
+                        <p style="margin: 0;">&nbsp;&nbsp;&nbsp;&nbsp;筑波大学 第一エリア 1B棟308教室</p>
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;入場料：無料(フリーカンパ制)</p>
+                        <div class="husen_img2"><a href="https://maps.app.goo.gl/sXtLMvfGARbC2JPt5"><img src="img/map.png" alt="memo"></a></div>
+                        <div class="map_attention"><p>※タップするとGoogleマップに遷移します。<br></p></div>
+                    </div><!-- ここまで付箋 -->
+                    <p>&nbsp;</p>
+                </div>
             </div>
         </div>
     </section>
@@ -71,11 +93,35 @@
         <div class="row">
             <div class="col-md-6 text-box">
                 <h2>キャスト</h2>
-                <p>主要キャストの紹介。</p>
+                <ul>
+                    <li>空：芦沢 那南</li>
+                    <li>お母ちゃん：岩﨑 聖羅</li>
+                    <li>泰造：池田 将太</li>
+                    <li>海：樫本 乃唯</li>
+                    <li>お父ちゃん：鈴木 快聖</li>
+                    <li>セツコ：岩﨑 聖羅</li>
+                    <li>翔太：鈴木 快聖</li>
+                    <li>晶：小口 桃佳</li>
+                    <li>翔太：鈴木 快聖</li>
+                    <li>剛：池田 将太</li>
+                    <li>お祖母ちゃん：樫本 乃唯</li>
+                </ul>
             </div>
             <div class="col-md-6 text-box">
                 <h2>スタッフ</h2>
-                <p>スタッフの紹介。</p>
+                <ul>
+                    <li>演出：鈴木 快聖</li>
+                    <li>演出補佐：小口 桃佳</li>
+                    <li>舞台監督：坂寄 翔</li>
+                    <li>制作：小口 桃佳</li>
+                    <li>照明：半田 泰輝、長田 真弥</li>
+                    <li>音響：友廣 怜央</li>
+                    <li>宣伝美術：常井 あゆみ、岩﨑 聖羅</li>
+                    <li>舞台美術：坂寄 翔</li>
+                    <li>Web：半田 泰輝</li>
+                    <li>記録：清水 星帆</li>
+                    <li>フリースタッフ：加藤 雄太</li>
+                </ul>
             </div>
         </div>
     </section>
