--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#synopsis-section">あらすじ</a></li>
             <li><a href="#info-section">公演情報</a></li>
             <li><a href="#cast-section">キャスト＆スタッフ</a></li>
-            <li><a href="#flyer-section">ビラ</a></li>
+            <li><a href="#flyer-section">ポスター</a></li>
             <li><a href="#sns-section">SNS情報</a></li>
         </ul>
     </div>
@@ -61,30 +61,20 @@
     <section id="info-section" class="container">
         <div class="row">
             <div class="col-md-6 text-box">
-                <div class="about_title fadeIn"><h2>公演情報</h2></div>
-                <div class="about_time">
-                    <div class="tape1"></div><!-- ここまで付箋テープ -->
-                    <div class="l-border l-p-t l-p-r l-p-b l-p-l hlabel1">
-                        <h4>-&nbsp;公演日程&nbsp;-</h4>
-                        <p style="margin: 0;">&nbsp;&nbsp;第1回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;第2回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 10:00開場 10:15開演<br>&nbsp;&nbsp;第3回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演</p>
-                        <div class="res_link"><p>ご予約はこちらから→</p></div>
-                        <div class="husen_img1"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe112nAMO6H0qfKzxoFiNjHhEo5FO9wM478jrwQf6YvgC1lFg/viewform"><img src="img/calender.png" alt="memo"></a></div>
-                    </div><!-- ここまで付箋 -->
-                    <p>&nbsp;</p>
-                </div>
+                <h2>公演情報</h2>
+                <h4>-&nbsp;公演日程&nbsp;-</h4>
+                <p style="margin: 0;">&nbsp;&nbsp;第1回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;第2回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 10:00開場 10:15開演<br>&nbsp;&nbsp;第3回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演</p>
+                <p>&nbsp;&nbsp;</p>
+                <p>&nbsp;&nbsp;※ご予約はこちらから↓</p>
+                <div class="husen_img1"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe112nAMO6H0qfKzxoFiNjHhEo5FO9wM478jrwQf6YvgC1lFg/viewform"><img src="img/calender.png" alt="memo"></a></div>
             </div>
             <div class="col-md-6 text-box">
-                <div class="about_map">
-                    <div class="tape2"></div><!-- ここまで付箋テープ -->
-                    <div class="l-border l-p-t l-p-r l-p-b l-p-l hlabel2">
-                        <h4>-&nbsp;会場情報&nbsp;-</h4>
-                        <p style="margin: 0;">&nbsp;&nbsp;&nbsp;&nbsp;筑波大学 第一エリア 1B棟308教室</p>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;入場料：無料(フリーカンパ制)</p>
-                        <div class="husen_img2"><a href="https://maps.app.goo.gl/sXtLMvfGARbC2JPt5"><img src="img/map.png" alt="memo"></a></div>
-                        <div class="map_attention"><p>※タップするとGoogleマップに遷移します。<br></p></div>
-                    </div><!-- ここまで付箋 -->
-                    <p>&nbsp;</p>
-                </div>
+                <h2>&nbsp;</h2>
+                <h4>-&nbsp;会場情報&nbsp;-</h4>
+                <p>&nbsp;</p>
+                <p style="margin: 0;">&nbsp;&nbsp;&nbsp;&nbsp;筑波大学 第一エリア 1B棟308教室</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;入場料：無料(フリーカンパ制)</p>
+                <div class="husen_img2"><a href="https://maps.app.goo.gl/sXtLMvfGARbC2JPt5"><img src="img/map.png" alt="memo"></a></div>
             </div>
         </div>
     </section>
@@ -92,7 +82,8 @@
     <section id="cast-section" class="container">
         <div class="row">
             <div class="col-md-6 text-box">
-                <h2>キャスト</h2>
+                <div class="cast">
+                <h2>&nbsp;&nbsp;-&nbsp;キャスト&nbsp;-&nbsp;</h2>
                 <ul>
                     <li>空：芦沢 那南</li>
                     <li>お母ちゃん：岩﨑 聖羅</li>
@@ -106,9 +97,11 @@
                     <li>剛：池田 将太</li>
                     <li>お祖母ちゃん：樫本 乃唯</li>
                 </ul>
+                </div>
             </div>
             <div class="col-md-6 text-box">
-                <h2>スタッフ</h2>
+                <div class="staff">
+                <h2>&nbsp;&nbsp;-&nbsp;スタッフ&nbsp;-&nbsp;</h2>
                 <ul>
                     <li>演出：鈴木 快聖</li>
                     <li>演出補佐：小口 桃佳</li>
@@ -123,26 +116,52 @@
                     <li>フリースタッフ：加藤 雄太</li>
                 </ul>
             </div>
+            </div>
         </div>
     </section>
 
     <section id="flyer-section" class="container">
         <div class="row">
             <div class="col-12 text-center text-box">
-                <h2>ビラ掲載</h2>
-                <img src="img/poster.png" alt="ビラ" class="img-fluid">
+                <h2>ポスター</h2>
+                <h2>&nbsp;</h2>
+                <a href="#flyer-modal">
+                    <img src="img/poster.png" alt="ビラ" class="img-fluid">
+                </a>
             </div>
         </div>
     </section>
+
+    <!-- モーダルウィンドウの追加 -->
+    <div id="flyer-modal">
+        <a href="#flyer-section">
+            <img src="img/poster.png" alt="ビラ">
+        </a>
+    </div>
 
     <section id="sns-section" class="container">
         <div class="row">
             <div class="col-md-6 text-box">
                 <h2>SNS情報</h2>
-                <p>公式SNSのリンクやQRコード。</p>
+                <ul class="snsbtniti">
+                    <li>
+                    <a href="エックスのプロフィールURL" class="flowbtn my_x1">
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <div>エックス</div>
+                    </a>
+                    </li>
+                </ul>
             </div>
             <div class="col-md-6 text-box">
-                <p>フォローを促すメッセージ。</p>
+                <h2>&nbsp;</h2>
+                <ul class="snsbtniti">
+                    <li>
+                        <a href="インスタのプロフィールURL" class="flowbtn my_instagram1">
+                        <i class="fa-brands fa-instagram"></i>
+                        <div>Instagram</div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
