--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico">
     <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <!-- ハンバーガーメニュー -->
@@ -50,7 +51,7 @@
         <div class="row">
             <div class="col-12 text-box">
                 <h2>あらすじ</h2>
-                <p>福島の里山で暮らす酪農一家の長男・楠木空には、特に将来の夢がない。<br>
+                <p><br>福島の里山で暮らす酪農一家の長男・楠木空には、特に将来の夢がない。<br>
                     小学校5年生になった空は、とあるきっかけから映画監督に興味を持つようになる。<br>
                     そんな中、空の日常を壊すかのように、突然大きな地震が起こった。<br>
                     その地震は、空や村に住む人々の世界を大きく変えてしまうのだった。</p>
@@ -120,7 +121,7 @@
         </div>
     </section>
 
-    <section id="flyer-section" class="container">
+    <section id="flyer-section" class="container poster-img">
         <div class="row">
             <div class="col-12 text-center text-box">
                 <h2>ポスター</h2>
@@ -139,29 +140,21 @@
         </a>
     </div>
 
-    <section id="sns-section" class="container">
+    <section id="sns-section" class="container sns-sect">
         <div class="row">
             <div class="col-md-6 text-box">
                 <h2>SNS情報</h2>
-                <ul class="snsbtniti">
-                    <li>
-                    <a href="エックスのプロフィールURL" class="flowbtn my_x1">
+                <a href="エックスのプロフィールURL" class="flowbtn2 my_x2">
                     <i class="fa-brands fa-x-twitter"></i>
                     <div>エックス</div>
                     </a>
-                    </li>
-                </ul>
             </div>
             <div class="col-md-6 text-box">
                 <h2>&nbsp;</h2>
-                <ul class="snsbtniti">
-                    <li>
-                        <a href="インスタのプロフィールURL" class="flowbtn my_instagram1">
-                        <i class="fa-brands fa-instagram"></i>
-                        <div>Instagram</div>
-                        </a>
-                    </li>
-                </ul>
+                <a href="インスタのプロフィールURL" class="flowbtn2 my_instagram2">
+                    <i class="fa-brands fa-instagram"></i>
+                    <div>Instagram</div>
+                </a>
             </div>
         </div>
     </section>
