--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 	</section>
 
-    <section id="synopsis-section" class="container">
+    <section id="synopsis-section" class="container arasuzi">
         <div class="row">
             <div class="col-12 text-box">
                 <h2>あらすじ</h2>
@@ -64,8 +64,8 @@
             <div class="col-md-6 text-box about">
                 <h2>公演情報</h2>
                 <h4>-&nbsp;公演日程&nbsp;-</h4>
-                <p style="margin: 0;">&nbsp;&nbsp;第1回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;第2回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 10:00開場 10:15開演<br>&nbsp;&nbsp;第3回<br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演</p>
-                <p>&nbsp;&nbsp;</p>
+                <p style="margin: 0;">&nbsp;&nbsp;<b>第1回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;<b>第2回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 10:00開場 10:15開演<br>&nbsp;&nbsp;<b>第3回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演</p>
+                <p>&nbsp;（公演は1時間30分を予定しています）</p>
                 <p>&nbsp;&nbsp;※ご予約はこちらから↓</p>
                 <div class="husen_img1"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe112nAMO6H0qfKzxoFiNjHhEo5FO9wM478jrwQf6YvgC1lFg/viewform"><img src="img/calender.png" alt="memo"></a></div>
             </div>
