--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div class="row">
             <div class="col-12 text-box">
                 <h2>あらすじ</h2>
-                <p><br>福島の里山で暮らす酪農一家の長男・楠木空には、特に将来の夢がない。<br>
-                    小学校5年生になった空は、とあるきっかけから映画監督に興味を持つようになる。<br>
-                    そんな中、空の日常を壊すかのように、突然大きな地震が起こった。<br>
-                    その地震は、空や村に住む人々の世界を大きく変えてしまうのだった。</p>
+                <p><br><span>福島の里山で暮らす酪農一家の長男・楠木空には、</span><span>特に将来の夢がない。</span><br>
+                <span>小学校5年生になった空は、</span><span>とあるきっかけから映画監督に興味を持つようになる。</span><br>
+            <span>そんな中、空の日常を壊すかのように、</span><span>突然大きな地震が起こった。</span><br>
+        <span>その地震は、空や村に住む人々の世界を</span><span>大きく変えてしまうのだった。</span></p>
             </div>
         </div>
     </section>
@@ -106,12 +106,12 @@
                 <ul>
                     <li>演出：鈴木 快聖</li>
                     <li>演出補佐：小口 桃佳</li>
-                    <li>舞台監督：坂寄 翔</li>
+                    <li>舞台監督：雑 魚</li>
                     <li>制作：小口 桃佳</li>
                     <li>照明：半田 泰輝、長田 真弥</li>
                     <li>音響：友廣 怜央</li>
                     <li>宣伝美術：常井 あゆみ、岩﨑 聖羅</li>
-                    <li>舞台美術：坂寄 翔</li>
+                    <li>舞台美術：雑 魚</li>
                     <li>Web：半田 泰輝</li>
                     <li>記録：清水 星帆</li>
                     <li>フリースタッフ：加藤 雄太</li>
