--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <li><a href="#info-section">公演情報</a></li>
             <li><a href="#cast-section">キャスト＆スタッフ</a></li>
             <li><a href="#flyer-section">ポスター</a></li>
-            <li><a href="#sns-section">SNS情報</a></li>
         </ul>
     </div>
 
@@ -74,8 +73,8 @@
                 <h4>-&nbsp;会場情報&nbsp;-</h4>
                 <p>&nbsp;</p>
                 <p style="margin: 0;">&nbsp;&nbsp;&nbsp;&nbsp;筑波大学 第一エリア 1B棟308教室</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;入場料：無料(フリーカンパ制)</p>
-                <div class="husen_img2"><a href="https://maps.app.goo.gl/sXtLMvfGARbC2JPt5"><img src="img/map.png" alt="memo"></a></div>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;入場料：基本無料</p>
+                <div class="husen_img2"><a href="https://maps.app.goo.gl/sXtLMvfGARbC2JPt5"><img src="img/map2.png" alt="memo"></a></div>
             </div>
         </div>
     </section>
@@ -140,27 +139,16 @@
         </a>
     </div>
 
-    <section id="sns-section" class="container sns-sect">
-        <div class="row">
-            <div class="col-md-6 text-box">
-                <h2>SNS情報</h2>
-                <a href="エックスのプロフィールURL" class="flowbtn2 my_x2">
-                    <i class="fa-brands fa-x-twitter"></i>
-                    <div>エックス</div>
-                    </a>
-            </div>
-            <div class="col-md-6 text-box">
-                <h2>&nbsp;</h2>
-                <a href="インスタのプロフィールURL" class="flowbtn2 my_instagram2">
-                    <i class="fa-brands fa-instagram"></i>
-                    <div>Instagram</div>
-                </a>
-            </div>
+    <footer class="footer bg-dark text-white text-center py-3">
+        <div class="social-icons">
+            <a href="https://www.instagram.com/yourprofile" target="_blank">
+                <img src="instagram-icon.png" alt="Instagram">
+            </a>
+            <a href="https://twitter.com/yourprofile" target="_blank">
+                <img src="twitter-icon.png" alt="Twitter">
+            </a>
         </div>
-    </section>
-
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2024 劇団あまつかぜ</p>
+        <p class="copyright">&copy; 2024 劇団あまつかぜ</p>
     </footer>
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
