--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		    <img src="img/home.jpg" alt="背景画像" class="img-fluid back">
         </div>
 		<div class="content">
-            <h2 class="fade-in delay-1">劇団あまつかぜ 旗揚げ公演</h2>
+            <h2 class="fade-in delay-1">劇団あまつかぜ 旗揚げ・解散公演</h2>
             <img class="fade-in delay-2" src="img/title.png" alt="空の村号">
             <!--<h1 class="fade-in delay-2">空の村号</h1>-->
             <p class="fade-in delay-3">作：篠原久美子<br>演出：鈴木快聖</p>
@@ -63,7 +63,7 @@
             <div class="col-md-6 text-box about">
                 <h2>公演情報</h2>
                 <h4>-&nbsp;公演日程&nbsp;-</h4>
-                <p style="margin: 0;">&nbsp;&nbsp;<b>第1回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;<b>第2回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 10:00開場 10:15開演<br>&nbsp;&nbsp;<b>第3回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演</p>
+                <p style="margin: 0;">&nbsp;&nbsp;<b>第1回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;<b>第2回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 開場・開演時間保留<br>&nbsp;&nbsp;<b>第3回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演</p>
                 <p>&nbsp;（公演は1時間30分を予定しています）</p>
                 <p>&nbsp;&nbsp;※ご予約はこちらから↓</p>
                 <div class="husen_img1"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe112nAMO6H0qfKzxoFiNjHhEo5FO9wM478jrwQf6YvgC1lFg/viewform"><img src="img/calender.png" alt="memo"></a></div>
@@ -91,6 +91,7 @@
                     <li>海：樫本 乃唯</li>
                     <li>お父ちゃん：鈴木 快聖</li>
                     <li>セツコ：岩﨑 聖羅</li>
+                    <li>クロズタケシ：鈴木 快聖</li>
                     <li>翔太：鈴木 快聖</li>
                     <li>晶：小口 桃佳</li>
                     <li>翔太：鈴木 快聖</li>
@@ -138,10 +139,10 @@
 
     <footer class="footer bg-dark text-white text-center py-3">
         <div class="social-icons">
-            <a href="https://www.instagram.com/yourprofile" target="_blank">
+            <a href="https://www.instagram.com/amtkz_tsukuba?igsh=MWozeXdrcmNqNjcxeg%3D%3D&utm_source=qr" target="_blank">
                 <img src="instagram-icon.png" alt="Instagram">
             </a>
-            <a href="https://twitter.com/yourprofile" target="_blank">
+            <a href="https://x.com/amtkz_tsukuba" target="_blank">
                 <img src="twitter-icon.png" alt="Twitter">
             </a>
         </div>
