snsアイコン追加

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
     <footer class="footer bg-dark text-white text-center py-3">
         <div class="social-icons">
             <a href="https://www.instagram.com/amtkz_tsukuba?igsh=MWozeXdrcmNqNjcxeg%3D%3D&utm_source=qr" target="_blank">
-                <img src="instagram-icon.png" alt="Instagram">
+                <img src="img/instagram.png" alt="Instagram">
             </a>
             <a href="https://x.com/amtkz_tsukuba" target="_blank">
-                <img src="twitter-icon.png" alt="Twitter">
+                <img src="img/x.png" alt="Twitter">
             </a>
         </div>
         <p class="copyright">&copy; 2024 劇団あまつかぜ</p>
