ポスター裏表

--- a/index.html
+++ b/index.html
@@ -123,14 +123,12 @@
     <section id="poster-section" class="container">
         <h1 class="text-center">ポスター</h1>
         <div class="container d-flex justify-content-center align-items-center vh-100">
-            <img src="img/poster.png" class="poster-image" alt="ポスター画像" data-bs-toggle="modal" data-bs-target="#imageModal">
-        </div>
-
-        <!-- Modal -->
-        <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <img src="img/poster.png" class="img-fluid" alt="拡大ポスター画像">
+            <div class="poster-card">
+                <div class="poster-front">
+                    <img src="img/poster.png" class="poster-image" alt="ポスター画像">
+                </div>
+                <div class="poster-back">
+                    <img src="img/poster_re.png" class="poster-image" alt="ポスター画像">
                 </div>
             </div>
         </div>
