ポスター位置調整

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <section id="poster-section" class="container">
         <h1 class="text-center">ポスター</h1>
-        <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="container d-flex justify-content-center align-items-center">
             <div class="poster-card">
                 <div class="poster-front">
                     <img src="img/poster.png" class="poster-image" alt="ポスター画像">
