--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
                 <h4>-&nbsp;公演日程&nbsp;-</h4>
                 <p style="margin: 0;">&nbsp;&nbsp;<b>第1回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年8月31日(土) 18:15開場 18:30開演<br>&nbsp;&nbsp;<b>第2回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 14:00開場 14:15開演<br>&nbsp;&nbsp;<b>第3回</b><br>&nbsp;&nbsp;&nbsp;&nbsp;2024年9月1日(日) 18:00開場 18:15開演</p>
                 <p>&nbsp;（公演は1時間30分を予定しています）</p>
-                <p>&nbsp;&nbsp;※ご予約はこちらから↓</p>
+                <p class="text-center">ご予約はこちらから↓</p>
                 <div class="husen_img1"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe112nAMO6H0qfKzxoFiNjHhEo5FO9wM478jrwQf6YvgC1lFg/viewform"><img src="img/calender.png" alt="memo"></a></div>
             </div>
             <div class="col-md-6 text-box map">
                 <h2>&nbsp;</h2>
                 <h4>-&nbsp;会場情報&nbsp;-</h4>
-                <p>&nbsp;</p>
                 <p style="margin: 0;">&nbsp;&nbsp;&nbsp;&nbsp;筑波大学 第一エリア 1B棟308教室</p>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;入場料：基本無料</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;入場料：無料(フリーカンパ制)</p>
                 <div class="husen_img2"><a href="https://maps.app.goo.gl/sXtLMvfGARbC2JPt5"><img src="img/map2.png" alt="memo"></a></div>
+                <p class="text-center">&nbsp;<br>※場所の詳細は地図をタップ！</p>
             </div>
         </div>
     </section>
@@ -132,6 +132,7 @@
                 </div>
             </div>
         </div>
+        <p class="text-center">&nbsp;<br>↑ タップすると裏面に！</p>
     </section>
 
     <footer class="footer bg-dark text-white text-center py-3">
